--- a/resources/assets/malisisdemos/lang/en_US.lang
+++ b/resources/assets/malisisdemos/lang/en_US.lang
@@ -2,13 +2,17 @@ itemGroup.malisisdemos=MalisisCore Demos
 
 tile.guiDemo.name=Gui Demo
 tile.connected_block.name=Connected Textures Demo
-tile.sgBlock.name=Stargate Block (Animations demo)
+tile.sgBlock.name=Stargate Block (Animations Demo)
 tile.tabInv.name=Tabbed Inventories Demo
-tile.modelDemo.name=Model demo
+tile.modelDemo.name=Model Demo
 tile.sidedBlockDemo.name=Sided Inventories Demo
 tile.testblock.name=Test
-tile.multiBlockDemo.name=MultiBlock Demo
+tile.aabbMultiBlockDemo.name=AABB MultiBlock Demo
+tile.patternMultiBlockDemo.name=Pattern MultiBlock Demo
 tile.waveblock.name=Waves Demo
 tile.bankdemo.name=Bank (Multiple Inventories Demo)
+tile.blockListener.name=Block Listener Demo
+tile.blockDirDemo.name=Block Directionnal Demo
 
 item.demoCard.name=Card (Multiple Inventories Demo)
+item.font_pointer.name=Pointer (Font Demo)
